# proto

./: .gitignore  Makefile  README.md  artifacts.proto  controller.proto  geometry.proto  manualcontrol.proto  metrics.proto  policy.proto  pyproject.toml  tasking.proto  taxonomy.proto  timeline.proto  world.proto  world.proto_
examples/: example_usage.py
go/: Makefile  artifacts.pb.go  artifacts_grpc.pb.go  buf.gen.yaml  controller.pb.go  controller_grpc.pb.go  generate.go  geometry.pb.go  go.mod  manualcontrol.pb.go  metrics.pb.go  policy.pb.go  tasking.pb.go  taxonomy.pb.go  timeline.pb.go  timeline_grpc.pb.go  world.pb.go  world_grpc.pb.go
go/_goconnect/: artifacts.connect.go  controller.connect.go  timeline.connect.go  world.connect.go
python/: Makefile  README.md  generate_protos.py  pyproject.toml
python/hydra_client/: __init__.py  client.py
python/platform_proto/: artifacts_pb2.py  artifacts_pb2.pyi  artifacts_pb2_grpc.py  controller_pb2.py  controller_pb2.pyi  controller_pb2_grpc.py  geometry_pb2.py  geometry_pb2.pyi  geometry_pb2_grpc.py  manualcontrol_pb2.py  manualcontrol_pb2.pyi  manualcontrol_pb2_grpc.py  metrics_pb2.py  metrics_pb2.pyi  metrics_pb2_grpc.py  policy_pb2.py  policy_pb2.pyi  policy_pb2_grpc.py  tasking_pb2.py  tasking_pb2.pyi  tasking_pb2_grpc.py  taxonomy_pb2.py  taxonomy_pb2.pyi  taxonomy_pb2_grpc.py  timeline_pb2.py  timeline_pb2.pyi  timeline_pb2_grpc.py  world_pb2.py  world_pb2.pyi  world_pb2_grpc.py
python/tests/: __init__.py  test_hydra_client.py  test_proto_bindings.py
rust/: Cargo.toml  Makefile  build.rs
rust/src/: lib.rs
scripts/: Makefile  generate_protos.py
ts/: Makefile  README.md  buf.gen.yaml  device.ts  package.json
